--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "vite-plugin-pwa": "^1.0.0",
+    "workbox-background-sync": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-strategies": "^7.3.0",
     "workbox-window": "^7.3.0"
   },
   "devDependencies": {
